force-app/main/default/objects/ZoneBranch__c/ZoneBranch__c.object-meta.xml
<CustomObject>
    <label>ZoneBranch</label>
    <nameField>
        <label>ZoneBranch Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZoneBranchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>