force-app/main/default/objects/ZoneBranch__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone</label>
    <referenceTo>Community</referenceTo>
    <relationshipName>ZoneBranchs</relationshipName>
    <type>Lookup</type>
</CustomField>