force-app/main/default/objects/ZoneBranch__c/fields/Zone_Finance__c.field-meta.xml
<CustomField>
    <fullName>Zone_Finance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Zone Finance</label>
    <referenceTo>Zone__c</referenceTo>
    <relationshipLabel>ZoneBranchs</relationshipLabel>
    <relationshipName>ZoneBranchs</relationshipName>
    <type>Lookup</type>
</CustomField>